[gd_scene load_steps=42 format=2]

[ext_resource path="res://Scenes/Actors/Humans/Human2.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Components/Inputs/PrimaryAction.input2.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Components/Inputs/MoveBackward.input2.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Components/Inputs/MoveForward.input2.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Components/Inputs/MoveVerticalStop.input2.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Components/Inputs/MoveLeft.input2.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Components/Inputs/MoveRight.input2.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Components/Inputs/MoveHorizontalStop.input2.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Components/Inputs/RotateUp.input2.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Components/Inputs/RotateDown.input2.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Components/Inputs/RotateVerticalStop.input2.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Components/Inputs/RotateLeft.input2.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Components/Inputs/RotateRight.input2.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Components/Inputs/RotateHorizontalStop.input2.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Components/Inputs/Crouch.input2.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scenes/Components/Inputs/Jump.input2.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scenes/Components/Inputs/Drop.input2.tscn" type="PackedScene" id=17]
[ext_resource path="res://Scenes/Components/Inputs/Pause.input2.tscn" type="PackedScene" id=18]
[ext_resource path="res://Scenes/Components/Inputs/Input.input2.tscn" type="PackedScene" id=19]
[ext_resource path="res://Scenes/Components/Inputs/Inventory.input2.tscn" type="PackedScene" id=20]
[ext_resource path="res://Scripts/Prop.WeaponTargetLock.gd" type="Script" id=21]
[ext_resource path="res://Scenes/Components/Inputs/SecondaryAction.input2.tscn" type="PackedScene" id=22]
[ext_resource path="res://Scripts/Prop.Bot.gd" type="Script" id=23]
[ext_resource path="res://Scenes/Components/Inputs/Zoom.input2.tscn" type="PackedScene" id=24]
[ext_resource path="res://Scripts/Input.gd" type="Script" id=25]
[ext_resource path="res://Scripts/Input.Crouch.gd" type="Script" id=26]
[ext_resource path="res://Scripts/Input.Drop.gd" type="Script" id=27]
[ext_resource path="res://Scripts/Input.Inventory.gd" type="Script" id=28]
[ext_resource path="res://Scripts/Input.MoveHorizontal.gd" type="Script" id=29]
[ext_resource path="res://Scripts/Input.Jump.gd" type="Script" id=30]
[ext_resource path="res://Scripts/Input.MoveHorizontalStop.gd" type="Script" id=31]
[ext_resource path="res://Scripts/Input.MoveVertical.gd" type="Script" id=32]
[ext_resource path="res://Scripts/Input.RotateVertical.gd" type="Script" id=33]
[ext_resource path="res://Scripts/Input.PrimaryAction.gd" type="Script" id=34]
[ext_resource path="res://Scripts/Input.Pause.gd" type="Script" id=35]
[ext_resource path="res://Scripts/Input.RotateVerticalStop.gd" type="Script" id=36]
[ext_resource path="res://Scripts/Input.MoveVerticalStop.gd" type="Script" id=37]
[ext_resource path="res://Scripts/Input.Secondary.gd" type="Script" id=38]
[ext_resource path="res://Scripts/Input.RotateHorizontal.gd" type="Script" id=39]
[ext_resource path="res://Scripts/Input.Zoom.gd" type="Script" id=40]
[ext_resource path="res://Scripts/Input.RotateHorizontalStop.gd" type="Script" id=41]

[node name="Player" instance=ExtResource( 1 )]

[node name="MoveBackwardInput" type="Node" parent="." index="0" instance=ExtResource( 3 )]
script = ExtResource( 32 )
action = "Backward"
strength_multiplier = -1.0

[node name="MoveForwardInput" type="Node" parent="." index="1" instance=ExtResource( 4 )]
script = ExtResource( 32 )
action = "Forward"

[node name="MoveVerticalStop" type="Node" parent="." index="2" instance=ExtResource( 5 )]
script = ExtResource( 37 )

[node name="MoveLeftInput" type="Node" parent="." index="3" instance=ExtResource( 6 )]
script = ExtResource( 29 )
action = "Left"

[node name="MoveRightInput" type="Node" parent="." index="4" instance=ExtResource( 7 )]
script = ExtResource( 29 )
action = "Right"
strength_multiplier = -1.0

[node name="MoveHorizontalStop" type="Node" parent="." index="5" instance=ExtResource( 8 )]
script = ExtResource( 31 )

[node name="RotateUpInput" type="Node" parent="." index="6" instance=ExtResource( 9 )]
script = ExtResource( 33 )
action = "RotateUp"

[node name="RotateDownInput" type="Node" parent="." index="7" instance=ExtResource( 10 )]
script = ExtResource( 33 )
action = "RotateDown"
strength_multiplier = -1.0

[node name="RotateVerticalStop" type="Node" parent="." index="8" instance=ExtResource( 11 )]
script = ExtResource( 36 )

[node name="RotateLeftInput" type="Node" parent="." index="9" instance=ExtResource( 12 )]
script = ExtResource( 39 )
action = "RotateLeft"

[node name="RotateRightInput" type="Node" parent="." index="10" instance=ExtResource( 13 )]
script = ExtResource( 39 )
action = "RotateRight"
strength_multiplier = -1.0

[node name="RotateHorizontalStop" type="Node" parent="." index="11" instance=ExtResource( 14 )]
script = ExtResource( 41 )

[node name="InventoryInput" type="Node" parent="." index="12" instance=ExtResource( 20 )]
script = ExtResource( 28 )

[node name="CrouchInput" type="Node" parent="." index="13" instance=ExtResource( 15 )]
script = ExtResource( 26 )
action = "Crouch"

[node name="JumpInput" type="Node" parent="." index="14" instance=ExtResource( 16 )]
script = ExtResource( 30 )
action = "Jump"

[node name="DropInput" type="Node" parent="." index="15" instance=ExtResource( 17 )]
script = ExtResource( 27 )
action = "Drop"

[node name="ZoomInput" type="Node" parent="." index="16" instance=ExtResource( 24 )]
script = ExtResource( 40 )
action = "Zoom"

[node name="PauseInput" type="Node" parent="." index="17" instance=ExtResource( 18 )]
script = ExtResource( 35 )
action = "Pause"

[node name="InvNextInput" type="Node" parent="." index="18" instance=ExtResource( 19 )]
script = ExtResource( 25 )
action = "ScrollUp"

[node name="InvPrevInput" type="Node" parent="." index="19" instance=ExtResource( 19 )]
script = ExtResource( 25 )
action = "ScrollDown"

[node name="SecondaryActionInput" type="Node" parent="." index="20" instance=ExtResource( 22 )]
script = ExtResource( 38 )
action = "Secondary"

[node name="PrimaryActionInput" type="Node" parent="." index="21" instance=ExtResource( 2 )]
script = ExtResource( 34 )
action = "Primary"

[node name="WeaponTargetLock" type="RayCast" parent="." index="22"]
cast_to = Vector3( 50, 0, 0 )
script = ExtResource( 21 )

[node name="Bot" type="Node" parent="." index="23"]
script = ExtResource( 23 )

[editable path="CameraRig"]
[editable path="CameraRaycastStim"]
[editable path="Perspective"]
